--- a/site/src/components/CSS/Hero.css
+++ b/site/src/components/CSS/Hero.css
@@ -12,7 +12,7 @@
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 70%;
 }
 
 .Hero::after
@@ -22,8 +22,10 @@
 
 .Hero-image
 {
-    max-width: 550px;
+    max-width: 100%;
     object-fit: cover;
+    height: auto;
+    width: auto\9;
     border-radius: 10px;
 }
 
@@ -120,11 +122,6 @@
         margin-left: auto;
         padding-left: 16px;
         padding-right: 16px;
-    }
-
-    .Hero-image
-    {
-        max-width: 300px;
     }
 }
 
