--- a/site/src/components/CSS/Hero.css
+++ b/site/src/components/CSS/Hero.css
@@ -85,6 +85,8 @@
     margin-bottom: 200px;
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;} */
     box-shadow: #4FD4F0 0px 0px 25px 0px;
+    text-decoration: none;
+    color: black;
 }
 .Hero-button:hover
 {
