--- a/site/src/components/CSS/Core.css
+++ b/site/src/components/CSS/Core.css
@@ -13,7 +13,7 @@
     margin-left: auto;
     margin-right: auto;
     gap: 32px;
-    width: 70%;
+    width: 60%;
 }
 
 .Core-contentWrapper
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    justify-content: space-around;
 }
 
 .Core-header
@@ -33,8 +34,7 @@
 
 .Core-description
 {
-    font-size: 17px;
-    text-align: center;
+    font-size: 18px;
 }
 
 .Core-imageWrapper
