--- a/site/src/components/CSS/Design.css
+++ b/site/src/components/CSS/Design.css
@@ -34,8 +34,23 @@ to{width: 100%;}
     from{width: 0;}
     to{width: 100%;}
     }
-@media screen and (max-width: 768px) 
-{
-    
-}
+.fade-in-section {
+    /* opacity: 0;
+    transform: translateY(20vh);
+    visibility: hidden;
+    transition: opacity 0.2s ease-out, transform 0.6s ease-out;
+    will-change: opacity, visibility; */
+    opacity: 0;
+    transform: translateY(20vh);
+    visibility: hidden;
+    transition: opacity 1.5s ease-out, transform 1s ease-out;
+    will-change: opacity, visibility;
+  }
+  
+  .is-visible {
+    opacity: 1;
+    transform: none;
+    visibility: visible;
+    display: flex; 
+  }
     
